# serializer version: 1
# name: test_r4_asmaddr2_bf16_srvw_golden
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_UserArgs_MT128x128x16NhYaEiza-ej7flnj5r8oV-SJYqTDb8Hqw-f6E50Q_NE=',
      'err': 0,
    }),
  ])
# ---
# name: test_r4_asmaddr2_fp32_golden
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT64x256x16_MI16x16xMHOw-DO0TQggHvoooK3UbFX5oM5XG0kNDxbN2RbfgH0=',
      'err': 0,
    }),
  ])
# ---
